argocd/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: cloudops-store
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: cloudops-store
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudops-store
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
